# common-Support

./: .autotools  .cproject  .gitbranch  .gitignore  .project  BasicInitializer.cpp  CMakeLists.txt  COPYRIGHT  ColorStreambuf.cpp  DebugOStream.cpp  DebugStreambuf.cpp  DoubleQuotedString.cpp  FilterOStream.cpp  FilterStreambuf.cpp  HeaderFooterStreambuf.cpp  Makefile.am  PTPTracing.cpp  PerformanceEvaluation.cpp  PtpTracer.cpp  README.md  RefCountObject.cpp  SMXIdManager.cpp  SingleQuotedString.cpp  SocketTCPClient.cpp  StdIstreamInputSource.cpp  StdIstreamInputStream.cpp  StdOstreamFormatTarget.cpp  TaskTracer.cpp  TemplateProcessor.cpp  Tracer.cpp  Tracing.cpp  TracingFactory.cpp  TranslationStreambuf.cpp  UniqueCIdentifierPool.cpp  UniquePool.cpp  arrayfifo.hpp  autotest-sh  basic_initializer.cpp  bit_buffer.hpp  build-cpp.gradle  (+75 more)
pkginclude/: Makefile.am  cosupport
pkginclude/.arch-ids/: =id  Makefile.am.id
pkginclude/CoSupport/: Random.hpp  SMXIdManager.hpp  commondefs.h  cosupport_config.h.in
pkginclude/CoSupport/.arch-ids/: =id  SMXIdManager.hpp.id  commondefs.h.id  cosupport_config.h.in.id  endianess.h.id  sassert.h.id
pkginclude/CoSupport/Allocators/: IdAllocRequest.hpp  IdPool.hpp
pkginclude/CoSupport/DataTypes/: ArrayFifo.hpp  CheckedVector.hpp  EMPTY.hpp  Facade.hpp  List.hpp  ListFacade.hpp  ListInterface.hpp  ListVirtual.hpp  MapFacade.hpp  MaybeValue.hpp  MaybeValueFacade.hpp  MaybeValueInterface.hpp  MaybeValueVirtual.hpp  NILTYPE.hpp  Projection.hpp  SerializeHelper.hpp  Set.hpp  SetFacade.hpp  SetInterface.hpp  SetVirtual.hpp  ValidWrapper.hpp  Value.hpp  ValueFacade.hpp  ValueInterface.hpp  ValueVirtual.hpp  Vector.hpp  VectorInterface.hpp  VectorProjection.hpp  bit_buffer.hpp  checked_vector.hpp  container_insert.hpp  container_retrieve.hpp  oneof.hpp
pkginclude/CoSupport/Initializer/: BasicInitializer.hpp
pkginclude/CoSupport/Lambda/: function_objects.hpp  functor.hpp
pkginclude/CoSupport/Math/: Interval.hpp  ModuloGroup.hpp  flog2.hpp  modulo.hpp  modulo_arith.hpp  smoc_math.hpp  string_hash.hpp
pkginclude/CoSupport/Path/: foo.cpp  manipulation.hpp  resourcelocations.hpp
pkginclude/CoSupport/Random/: RandomGenerator.hpp  RandomGenerators.hpp  RandomUniform.hpp  RandomUrn.hpp  randomSource.hpp
pkginclude/CoSupport/SmartPtr/: RefCount.hpp  RefCountObject.hpp  intrusive_copyonwrite_ptr.hpp  intrusive_refcount_ptr.hpp  shared_copyonwrite_ptr.hpp
pkginclude/CoSupport/Streams/: AlternateStream.hpp  ColorStreambuf.hpp  DebugOStream.hpp  DebugStreambuf.hpp  FilterOStream.hpp  FilterStreambuf.hpp  HeaderFooterStreambuf.hpp  HexOutput.hpp  IndentStreambuf.hpp  LineNumberStreambuf.hpp  NullStreambuf.hpp  SocketTCPClient.hpp  TranslationStreambuf.hpp  iterator_dump.hpp  stl_output_for_list.hpp  stl_output_for_map.hpp  stl_output_for_pair.hpp  stl_output_for_set.hpp  stl_output_for_vector.hpp
pkginclude/CoSupport/String/: Concat.hpp  TemplateProcessor.hpp  TypeName.hpp  UniqueCIdentifierPool.hpp  UniquePool.hpp  convert.hpp  identifiermanipulation.hpp
pkginclude/CoSupport/SystemC/: ChannelModificationListener.hpp  PerformanceEvaluation.hpp  VcdFile.hpp  algorithm.hpp  par_actor.hpp  par_actor_factory.hpp  par_manager.hpp  par_port.hpp  systemc_support.hpp  systemc_time.hpp
pkginclude/CoSupport/Tracing/: PTPTracing.hpp  PtpTracer.hpp  TaskTracer.hpp  Tracer.hpp  Tracing.hpp  TracingFactory.hpp
pkginclude/CoSupport/Type/: STLIteratorSelector.hpp  STLPointerSelector.hpp  STLReferenceSelector.hpp  STLReverseIteratorSelector.hpp  constpropagate.hpp  transform.hpp
pkginclude/CoSupport/XML/: StdIstreamInputSource.hpp  StdIstreamInputStream.hpp  StdOstreamFormatTarget.hpp  xalan_support.hpp  xerces_support.hpp
pkginclude/CoSupport/compatibility-glue/: integertypes.h  snprintf.h
pkginclude/cosupport/: AlternateStream.hpp  ChannelModificationListener.hpp  HexOutput.hpp  PerformanceEvaluation.hpp  SMXIdManager.hpp  ValidWrapper.hpp  basic_initializer.hpp  bit_buffer.hpp  checked_vector.hpp  commondefs.h  container_insert.hpp  facade.hpp  facade2.hpp  filter_ostream.hpp  function_objects.hpp  functor.hpp  intrusive_refcount_ptr.hpp  list_facade.hpp  modulo_arith.hpp  par_manager.hpp  par_port.hpp  refcount.hpp  refcount_object.hpp  shared_copyonwrite_ptr.hpp  smoc_debug_out.hpp  smoc_math.hpp  snprintf.h  string_convert.hpp  string_hash.hpp  systemc_support.hpp  typename.hpp  typetransform.hpp  xalan_support.hpp  xerces_support.hpp
src/: Makefile.am
src/cosupport-allocators/headers/: Makefile.am
src/cosupport-base/headers/: Makefile.am
src/cosupport-initializer/cpp/: BasicInitializer.cpp
src/cosupport-initializer/headers/: Makefile.am
src/cosupport-math/cpp/: Interval.cpp  flog2.cpp
src/cosupport-math/headers/: Makefile.am
src/cosupport-path/cpp/: manipulation.cpp  resourcelocations.cpp
src/cosupport-path/headers/: Makefile.am
src/cosupport-random/cpp/: randomSource.cpp
src/cosupport-random/headers/: Makefile.am
src/cosupport-smartptr/cpp/: RefCountObject.cpp
src/cosupport-smartptr/headers/: Makefile.am
src/cosupport-streams/cpp/: AlternateStream.cpp  ColorStreambuf.cpp  DebugOStream.cpp  DebugStreambuf.cpp  FilterOStream.cpp  FilterStreambuf.cpp  HeaderFooterStreambuf.cpp  IndentStreambuf.cpp  LineNumberStreambuf.cpp  NullStreambuf.cpp  SocketTCPClient.cpp  TranslationStreambuf.cpp
src/cosupport-streams/headers/: Makefile.am
src/cosupport-string/cpp/: DoubleQuotedString.cpp  Environment.cpp  QuotedString.cpp  SingleQuotedString.cpp  TemplateProcessor.cpp  UnQuotedString.cpp  UniqueCIdentifierPool.cpp  UniquePool.cpp  XMLQuotedString.cpp  color.cpp  convert.cpp  identifiermanipulation.cpp  quoting.cpp
src/cosupport-string/headers/: Makefile.am
src/cosupport-systemc/cpp/: ChannelModificationListener.cpp  PerformanceEvaluation.cpp  algorithm.cpp  par_manager.cpp  systemc_support.cpp  systemc_time.cpp
src/cosupport-systemc/headers/: Makefile.am
src/cosupport-tracing/cpp/: PajeTracer.cpp  PtpTracer.cpp  Tracer.cpp  TracingFactory.cpp
src/cosupport-xerces/cpp/: Handler.cpp  (+4 more)
testcases/: Makefile.am  autotest-sh
(+880 files in other folders)
